<resources>
    <string name="app_name">Calculator-Bundy</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="posOrNeg">"+/-"</string>
    <string name="div">÷</string>
    <string name="mult">X</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="point">.</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
